# NLU_Ass_2_B22CH045

./: .gitignore  README.md  pyproject.toml  task1.py  task2.py  task3_4.py
colab/: Problem2_Colab_Training.ipynb  Problem2_GPU_Train.ipynb  Problem2_Training.ipynb  build_problem2_notebook.py  problem2_colab_training.py
output/: ASSIGNMENT_REPORT.md  PROBLEM2_REPORT.md  TASK2_REPORT.md  TASK3_TASK4_APPENDIX.md  corpus_tokens.pkl  generate_report_assets.py  task2_results.csv  task3_neighbors.csv
problem1/: __init__.py  build_corpus.py  config.py  crawl.py  domain_analogies.txt  semantic_utils.py  task3_semantic.py  task4_visualize.py  text_io.py  train_word2vec.py  w2v_common.py  word_lists.py
problem1/output/: PROBLEM1_REPORT.md  TASK2_REPORT.md  corpus.txt  corpus_meta.json  corpus_tokens.pkl  crawl_log.json  problem1_task2_report.md  research_embedding_300d.txt  task2_results.csv  task3_neighbors.csv  task3_semantic_analysis.md  task4_visualization.md  w2v_experiment_manifest.json  w2v_experiments.csv
problem2/: __init__.py  colab_train_all.py  data_io.py  evaluate.py  generate_training_names.py  models.py  run_eval_all.py  train.py  vocab.py
problem2/data/: TrainingNames.txt
problem2/problem2_colab_out/: checkpoint_attn.pt  checkpoint_blstm.pt  checkpoint_rnn.pt  eval_attn.json  eval_attn.samples.txt  eval_blstm.json  eval_blstm.samples.txt  eval_rnn.json  eval_rnn.samples.txt  loss_history_attn.json  loss_history_blstm.json  loss_history_rnn.json  train_meta_attn.json  train_meta_blstm.json  train_meta_rnn.json  training_summary.json
